--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "june",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll",
+    "test:generate-output": "react-scripts test --coverage --watchAll --json --outputFile=./coverage/.jest-test-results.json",
+    "test:generate-output:build": "react-scripts test ./src/components --coverage --collectCoverageFrom=./src/components --json --outputFile=./coverage/.jest-test-results.json",
+    "lint": "eslint --fix \"src/**/*.{ts,tsx}\"",
+    "swagger": "npx swagger-typescript-api -p ./swagger/swagger.json -o ./src/data -n Api.ts --axios"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,19 +30,26 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "swagger": "npx swagger-typescript-api -p ./swagger/swagger.json -o ./src/data -n Api.ts --axios"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.1"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 90,
+        "lines": 90,
+        "statements": -10
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "index.tsx",
+      "src/app/App.tsx",
+      "reportWebVitals.ts",
+      ".stories.*",
+      ".spec.*"
+    ]
   }
 }
