--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,12 @@
     "react-app",
     "react-app/jest",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/array-type": [2, { "default": "generic" }],
+    "@typescript-eslint/explicit-function-return-type": 2,
+    "@typescript-eslint/explicit-member-accessibility": 2,
+    "@typescript-eslint/member-ordering": 2,
+    "@typescript-eslint/parameter-properties": 2
+  }
 }
