--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
     "swagger-typescript-api": "^13.0.3",
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
+    "jest-extended": "^4.0.2",
     "prettier": "^3.2.1"
   },
   "jest": {
@@ -50,7 +52,8 @@
       "src/app/App.tsx",
       "reportWebVitals.ts",
       ".stories.*",
-      ".spec.*"
+      ".spec.*",
+      ".routes.*"
     ]
   }
 }
