--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "jest-extended": "^4.0.2",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.2.1"
   },
   "jest": {
