--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-unicorn": "^50.0.1",
     "husky": "^8.0.3",
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.0",
