--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,10 +15,16 @@
     "plugin:jsx-a11y/strict",
     "plugin:compat/recommended",
     "react-app/jest",
+    "plugin:storybook/recommended",
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "@typescript-eslint/array-type": [2, { "default": "generic" }],
+    "@typescript-eslint/array-type": [
+      2,
+      {
+        "default": "generic"
+      }
+    ],
     "@typescript-eslint/explicit-function-return-type": 2,
     "@typescript-eslint/explicit-member-accessibility": 2,
     "@typescript-eslint/member-ordering": 2,
@@ -80,7 +86,9 @@
     "react/no-unused-prop-types": 2,
     "unicorn/consistent-function-scoping": [
       2,
-      { "checkArrowFunctions": false }
+      {
+        "checkArrowFunctions": false
+      }
     ],
     "unicorn/filename-case": [
       2,
@@ -96,12 +104,6 @@
     ]
   },
   "overrides": [
-    {
-      "files": ["**/*.stories.*"],
-      "rules": {
-        "import/no-anonymous-default-export": 0
-      }
-    },
     {
       "files": ["**/*.cy.*"],
       "rules": {
