--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:generate-output": "react-scripts test --coverage --watchAll --json --outputFile=./coverage/.jest-test-results.json",
     "test:generate-output:build": "react-scripts test ./src/components --coverage --collectCoverageFrom=./src/components --json --outputFile=./coverage/.jest-test-results.json",
     "lint": "eslint --fix \"src/**/*.{ts,tsx}\"",
-    "swagger": "npx swagger-typescript-api -p ./swagger/swagger.json -o ./src/data -n Api.ts --axios"
+    "swagger": "npx swagger-typescript-api -p ./swagger/swagger.json -o ./src/data -n Api.ts --axios",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -33,16 +35,32 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.6.9",
+    "@storybook/addon-essentials": "^7.6.9",
+    "@storybook/addon-interactions": "^7.6.9",
+    "@storybook/addon-jest": "^7.6.9",
+    "@storybook/addon-links": "^7.6.9",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/addon-storysource": "^7.6.9",
+    "@storybook/blocks": "^7.6.9",
+    "@storybook/preset-create-react-app": "^7.6.9",
+    "@storybook/react": "^7.6.9",
+    "@storybook/react-webpack5": "^7.6.9",
+    "@storybook/test": "^7.6.9",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unicorn": "^50.0.1",
     "husky": "^8.0.3",
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.2.1"
+    "prettier": "^3.2.1",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.6.9",
+    "webpack": "^5.89.0"
   },
   "jest": {
     "coverageThreshold": {
